[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicon"
description = "A collection of tools for cryo-EM analysis of helical structures"
authors = [
    {name = "Wen Jiang", email = "wjiang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version", "dependencies"]
keywords = ["cryo-EM", "structural biology", "helical symmetry", "helical indexing", "image analysis", "Web apps"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Structural Biology",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/jianglab/helicon"

[project.scripts]
helicon = "helicon.helicon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "helicon.__version__"}
dependencies = {file = ["requirements.txt"]}