[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicon"
description = "A collection of tools for cryo-EM analysis of helical structures"
authors = [
    {name = "Wen Jiang", email = "wjiang@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ['cryosparc-tools', 'finufft', 'joblib', 'matplotlib', 'mrcfile', 'numba', 'numpy', 'pandas[html]', 'rich', 'scikit-image', 'scikit-learn', 'scipy', 'starfile', 'tqdm']
keywords = ["cryo-EM", "structural biology", "helical symmetry", "helical indexing", "image analysis", "Web apps"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Structural Biology",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
homepage = "https://github.com/jianglab/helicon"

[project.scripts]
helicon = "helicon.helicon:main"

[project.optional-dependencies]
shiny = ['ipyfilechooser', 'ipywidgets<8', 'plotly', 'requests', 'shiny', 'shinywidgets']

streamlit = ['atomium', 'bokeh==2.4.3', 'kneebow', 'numpy', 'psutil', 'qrcode', 'shapely', 'st-clickable-images', 'streamlit','streamlit-drawable-canvas', 'trackpy', 'uptime', 'xmltodict']

all = ['atomium', 'bokeh==2.4.3', 'kneebow', 'ipyfilechooser', 'ipywidgets<8', 'plotly', 'psutil', 'qrcode', 'requests', 'shapely', 'shiny', 'shinywidgets', 'st-clickable-images', 'streamlit','streamlit-drawable-canvas', 'trackpy', 'uptime', 'xmltodict']

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "helicon.__version__"}