[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicon"
description = "A collection of tools for cryo-EM analysis of helical structures"
authors = [
    {name = "Wen Jiang", email = "wxj5136@psu.edu"},
    {name = "Daoyi Li", email = "lidaoyi16@hotmail.com"},
    {name = "Xiaoqi Zhang", email = "xbz5343@psu.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ['cryosparc-tools', 'finufft', 'joblib', 'matplotlib', 'mrcfile', 'numba', 'numpy', 'pandas[html]', 'rich', 'scikit-image', 'scikit-learn', 'scipy', 'starfile', 'tqdm']
keywords = ["cryo-EM", "structural biology", "helical symmetry", "helical indexing", "image analysis", "Web apps"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Structural Biology",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
homepage = "https://github.com/jianglab/helicon"

[project.scripts]
helicon = "helicon.helicon:main"

[project.optional-dependencies]
shiny = ['ipyfilechooser', 'ipywidgets', 'itk-montage', 'plotly', 'requests', 'shiny', 'shinywidgets']

streamlit = ['atomium', 'bokeh', 'kneebow', 'numpy', 'psutil', 'qrcode', 'shapely', 'st-clickable-images', 'streamlit', 'streamlit-bokeh', 'streamlit-drawable-canvas', 'trackpy', 'uptime', 'xmltodict']

all = [
    "helicon[shiny]",
    "helicon[streamlit]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "helicon.__version__"}
